# muffin-rest

./: .bumpversion.cfg  .coveragerc  .git-commits.yaml  .gitignore  .pre-commit-config.yaml  .vimrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.rst  Changelog  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tests.py
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
example/: __init__.py  api.py  forms.py  models.py  schemas.py
examples/peewee_orm/: __init__.py  api.py  db.sqlite  models.py  schemas.py
examples/sqlalchemy_core/: __init__.py  api.py  db.sqlite  tables.py
muffin_rest/: __init__.py  api.py  endpoint.py  errors.py  exceptions.py  filters.py  forms.py  handler.py  handlers.py  limits.py  marshmallow.py  openapi.py  options.py  peewee.py  redoc.html  schemas.py  sorting.py  swagger.html  types.py  utils.py
muffin_rest/mongo/: __init__.py  filters.py  schema.py  sorting.py  types.py  utils.py
muffin_rest/peewee/: __init__.py  filters.py  handler.py  openapi.py  options.py  schemas.py  sorting.py  types.py  utils.py
muffin_rest/sqlalchemy/: __init__.py  filters.py  sorting.py  types.py
muffin_rest/templates/: swagger.html
requirements/: requirements-tests.txt  requirements.txt
tests/: conftest.py  test_base.py  test_filters.py  test_limit.py  test_mongo.py  test_openapi.py  test_peewee.py  test_schemas.py  test_sqlalchemy.py
