[tool.poetry]
name = "muffin-rest"
version = "9.0.0"
description = "The package provides enhanced support for writing REST APIs with Muffin framework"
readme = "README.rst"
homepage = "https://github.com/klen/muffin-rest"
repository = "https://github.com/klen/muffin-rest"
authors = ["Kirill Klenov <horneds@gmail.com>"]
license = "MIT"
keywords = ["rest", "api", "muffin", "asgi", "asyncio", "trio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
  "Framework :: Trio",
]

[tool.poetry.dependencies]
python = "^3.9"
apispec = "^6"
marshmallow = "^3"
muffin = "^0"

# Optional dependencies
pyyaml = { version = "*", optional = true }
muffin-peewee-aio = { version = "*", optional = true }
marshmallow-peewee = { version = "*", optional = true }
muffin-databases = { version = "*", optional = true }
marshmallow-sqlalchemy = { version = "*", optional = true }
sqlalchemy = { version = "*", optional = true }

[tool.poetry.extras]
yaml = ["pyyaml"]
peewee = ["muffin-peewee-aio", "marshmallow-peewee"]
sqlalchemy = ["muffin-databases", "marshmallow-sqlalchemy", "sqlalchemy"]

[tool.poetry.group.tests.dependencies]
aiosqlite = "*"
marshmallow-peewee = "*"
marshmallow-sqlalchemy = "*"
muffin-databases = "*"
muffin-mongo = "*"
muffin-peewee-aio = "*"
pytest = "*"
pytest-aio = { version = "*", extras = ["curio", "trio"] }
pyyaml = "*"
types-PyYAML = "*"
types-ujson = "*"
ruff = "*"
mypy = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"

[tool.poetry.group.example.dependencies]
uvicorn = "*"
muffin-peewee-aio = "*"
marshmallow-peewee = "*"


[tool.pytest.ini_options]
addopts = "-xsv tests"
log_cli = true

[tool.mypy]
packages = ["muffin_rest"]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311,py312,pypy39

[testenv]
deps = -e .[tests]
commands =
	pytest tests
"""

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A003",
  "ANN",
  "ARG",
  "COM",
  "D",
  "DJ",
  "EM",
  "FIX",
  "FA100",
  "N804",
  "PLR0912",
  "PLR2004",
  "RET",
  "RSE",
  "S101",
  "SLF",
  "TD",
  "TRY003",
  "UP",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
preview = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
