[project]
name = "muffin-rest"
version = "13.0.4"
description = "The package provides enhanced support for writing REST APIs with Muffin framework"
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
keywords = ["rest", "api", "muffin", "asgi", "asyncio", "trio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
  "Framework :: Trio",
]
dependencies = ["apispec>=6,<7", "marshmallow>=3,<4", "muffin"]

[project.optional-dependencies]
yaml = ["pyyaml"]
peewee = ["muffin-peewee-aio", "marshmallow-peewee"]
sqlalchemy = ["muffin-databases", "marshmallow-sqlalchemy", "sqlalchemy"]

[project.urls]
Homepage = "https://github.com/klen/muffin-rest"
Repository = "https://github.com/klen/muffin-rest"

[dependency-groups]
dev = [
  "aiosqlite",
  "marshmallow-peewee",
  "marshmallow-sqlalchemy",
  "muffin-databases",
  "muffin-mongo",
  "muffin-peewee-aio",
  "pytest",
  "pytest-aio[curio, trio]",
  "pyyaml",
  "ruff",
  "pyrefly",
  "pre-commit",
  "tox",
]
example = ["uvicorn", "muffin-peewee-aio", "marshmallow-peewee"]

[tool.uv]
default-groups = ["dev", "example"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "muffin_rest"
module-root = ""

[tool.pytest.ini_options]
addopts = "-xsv tests"
log_cli = true

[tool.pyrefly]
project-includes = ["muffin_rest"]
project-excludes = ["tests", "examples", "docs", "setup.py", "pyproject.toml"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312,py313,py314,pypy311

[testenv]
allowlist_externals = uv,pytest
commands =
  uv pip install --system -e .[dev]
	pytest tests
"""

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A003",
  "ANN",
  "ARG",
  "COM",
  "D",
  "DJ",
  "EM",
  "FA100",
  "FIX",
  "N",
  "PLC0415",
  "PLR0912",
  "PLR2004",
  "RET",
  "RSE",
  "RUF012",
  "S101",
  "SLF",
  "TD",
  "TRY003",
  "UP",
]

[tool.bumpversion]
current_version = "13.0.4"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
