[wheel]
python-tag = py3

[metadata]
name = muffin-rest
version = attr: muffin_rest.__version__
url = https://github.com/klen/muffin-rest
description = the package provides enhanced support for writing REST APIs with Muffin_.
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = rest, api, muffin, asgi, asyncio, trio
project_urls = 
    Documentation = https://github.com/klen/muffin-rest
    Source code = https://github.com/klen/muffin-rest
    Issue tracker = https://github.com/klen/muffin-rest/issues
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: AsyncIO
    Framework :: Trio

[options]
packages = muffin_rest
include_package_data = True
python_requires = >= 3.7
 
[options.package_data]
muffin_rest = py.typed      

[pylama]
ignore = D105,D211,D213,D203,D401
linters = pylint,mypy

[pylama:pylint]
disable = F0001,W0212,E1102,R0201,C0202

[pylama:setup.py]
ignore = D

[pylama:tests/*]
ignore = D

[pylama:example/*.py]
ignore = D

[mypy]
ignore_missing_imports = True

[tool:pytest]
addopts = -xsv
log_cli = True

[tox:tox]
envlist = py37,py38,py39,py310

[testenv]
deps =
    -rrequirements/requirements.txt
    -rrequirements/requirements-tests.txt
    -e .[tests]
commands = 
	pytest tests
